--- a/NoteProject/appsettings.json
+++ b/NoteProject/appsettings.json
@@ -1,4 +1,9 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "server=213.238.183.40;port=3306;database=cagnazco_testdb;user=noteToUser;password=$Vhk69c67;"
+
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
